# cpp_project_template

./: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
